--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +42,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "web-vitals": "^2.1.4"
   }
 }
