--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "raviger": "^4.0.0",
     "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.4"
   }
