--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "raviger": "^4.0.0",
+    "react-multi-select-component": "^4.2.4",
     "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.4"
   }
